@@ -17,34 +17,39 @@ use Slim::Utils::Strings qw(string);
 use Slim::Utils::Prefs;
 
 my $log = Slim::Utils::Log->addLogCategory({
-	'category'     => 'plugin.blissmixer',
-	'defaultLevel' => 'ERROR',
+    'category'     => 'plugin.blissmixer',
+    'defaultLevel' => 'ERROR',
 });
 
 my $prefs = preferences('plugin.blissmixer');
 my $serverprefs = preferences('server');
 
 sub name {
-	return Slim::Web::HTTP::CSRF->protectName('BlissMixer');
+    return Slim::Web::HTTP::CSRF->protectName('BlissMixer');
 }
 
 sub page {
-	return Slim::Web::HTTP::CSRF->protectURI('plugins/BlissMixer/settings/blissmixer.html');
+    return Slim::Web::HTTP::CSRF->protectURI('plugins/BlissMixer/settings/blissmixer.html');
 }
 
 sub prefs {
-	return ($prefs, 'host mixer_port', 'filter_genres', 'filter_xmas', 'min_duration', 'max_duration', 'no_repeat_artist', 'no_repeat_album', 'no_repeat_track', 'dstm_tracks', 'genre_groups', 'weight_tempo', 'weight_timbre', 'weight_loudness', 'weight_chroma', 'max_bpm_diff', 'use_track_genre');
+    return ($prefs, 'host mixer_port', 'filter_genres', 'filter_xmas', 'min_duration', 'max_duration', 'no_repeat_artist', 'no_repeat_album', 'no_repeat_track', 'dstm_tracks', 'genre_groups', 'weight_tempo', 'weight_timbre', 'weight_loudness', 'weight_chroma', 'max_bpm_diff', 'use_track_genre', 'run_analyser_after_scan', 'analysis_running');
 }
 
 sub beforeRender {
     my ($class, $paramRef) = @_;
     $paramRef->{allowPortConfig} = $serverprefs->get('authorize');
+    $paramRef->{'analysisRunning'} = 1 if Plugins::BlissMixer::Analyser::isScanning();
 }
 
-
 sub handler {
-	my ($class, $client, $params, $callback, @args) = @_;
-	return $class->SUPER::handler($client, $params);
+    my ($class, $client, $paramRef) = @_;
+    if ($paramRef->{'rescan'}) {
+        Plugins::BlissMixer::Analyser::rescan();
+    } elsif ($paramRef->{'abortscan'}) {
+        Plugins::BlissMixer::Analyser::abortScan();
+    }
+    return $class->SUPER::handler($client, $paramRef);
 }
 
 1;
