@@ -5,6 +5,7 @@
 	<icon>plugins/BlissMixer/html/images/blissmixer.png</icon>
 	<name>BLISSMIXER</name>
 	<module>Plugins::BlissMixer::Plugin</module>
+	<importmodule>Plugins::BlissMixer::Importer</importmodule>
 	<version>0.6.0</version>
 	<description>BLISSMIXER_DESC</description>
 	<creator>Craig Drummond</creator>
