@@ -1,8 +1,10 @@
 0.7.0
 -----
-1. Add 'exclude christmas' support to list 'similar tracks' - thanks to
+1. Bundle analyser with plugin.
+2. Allow running analyser from settings pages, and after LMS scans.
+3. Update to use new bliss-rs analysis results.
+4. Add 'exclude christmas' support to list 'similar tracks' - thanks to
    VictorvandenHoven
-2. Update to use new bliss-rs analysis results.
 
 0.6.0
 -----
